--- a/MultiTetris/public/style.css
+++ b/MultiTetris/public/style.css
@@ -1,12 +1,17 @@
 body {
-  /* background-color: #000;
-  color: #FFF; */
+  display: flex;
+  background-color: #000;
+  color: #FFF;
   font-family: sans-serif;
   font-size:  2em;
   text-align: center;
 }
 
+.player {
+  flex: 1 1 auto;
+}
+
 canvas {
-  /* border: solid .2em #FFF; */
+  border: solid .2em #FFF;
   height: 90vh;
 }
